@@ -13,3 +13,5 @@ Požiadavky na spustenie aplikacie:
 Postup inštalacie Spring Web Applications:
 <div>1. Skopirovanie GitHub linku</div>
  <div class="snippet-clipboard-content notranslate position-relative overflow-auto" data-snippet-clipboard-copy-content="Windows command: --module-path "\path\to\javafx-sdk-22.0.1\lib" --add-modules javafx.controls,javafx.fxml">
+  <pre lang="terminal" class="notranslate"><code>Windows command: --module-path "\path\to\javafx-sdk-22.0.1\lib" --add-modules javafx.controls,javafx.fxml</code></pre>
+</div>
